@@ -1,3 +1,8 @@
+2007-07-23  Sébastien Sablé  <sable@users.sourceforge.net>
+
+	* Better compliance with DBAPI: returns None in nextset when no
+	more set
+
 2007-05-22  Sébastien Sablé  <sable@users.sourceforge.net>
 
 	* Add metadata for pypi
